# bass-tuna

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: pitch_estimation.rs
experiments/: Manifest.toml  Pluck Detection-Simple Filter.ipynb  Pluck Detection.ipynb  Project.toml  Tuning - Resonators.ipynb  Tuning-YIN-Multiscale.ipynb  Tuning-YIN.ipynb  Tuning.ipynb
src/: audio.rs  main.rs  tui.rs  tuner.rs
src/lib/: audio.rs  filters.rs  mod.rs  tuner.rs
