[package]
name = "bass-tuna"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Darwin Darakananda <darwindarak@gmail.com>"]
keywords = ["cli", "tool", "audio", "music"]
categories = ["command-line-utilities"]
repository = "https://github.com/darwindarak/bass-tuna"
description = """
A terminal-based string instrument tuner.
"""

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
cpal = "0.15.3"
crossbeam-channel = "0.5.14"
crossterm = "0.28.1"
num = "0.4.3"
num-traits = "0.2.19"
ratatui = "0.29.0"

[dev-dependencies]
rand = "0.8.5"
assert_approx_eq = "1.1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pitch_estimation"
harness = false
